# agentic-ecommerce

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  MERCHANT_INTEGRATION.md  Makefile  PRODUCTION_CHECKLIST.md  README.md  SPEAKO_CODEBASE_REFERENCE.md  SPEAKO_TEST_REPORT.md  TESTING_OVERVIEW.md  TEST_REPORT.md  VOICE_LOAD_REPORT.md  VOICE_TEST_REPORT.md  alembic.ini  pyproject.toml  render.yaml
.claude/: settings.local.json
.github/workflows/: deploy.yml
app/: main.py
app/core/: config.py  container.py  context.py  exceptions.py  logging.py  secrets.py
app/migrations/: env.py
backend/: .env.example  SCALING.md  alembic.ini  main.py  pyproject.toml  railway.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_shopify_oauth_fields.py  0003_tenant_platform_and_woocommerce_fields.py  0004_analytics_unique_constraint.py  0005_pgvector_product_embeddings.py  0006_product_cache_upsert_support.py  0007_product_cache_tenant_index.py  0008_tenant_custom_api_fields.py  0009_seed_plans.py  0010_tenant_password_and_constraints.py  0011_product_cache_hnsw_index.py  0012_webhook_idempotency.py  0013_enable_rls.py  0014_product_cache_in_stock_nullable.py  0015_tenant_store_config.py  0016_tenant_ai_config.py  0017_orders_capture.py  0018_offers_models.py
backend/scripts/: fix_rls_role.sql
backend/src/app/: config.py  dependencies.py  server.py
backend/src/app/agent/: beta_logger.py  classifier.py  extractor.py  gemini_client.py  guardrails.py  llm_clients.py  llm_router.py  orchestrator.py  retry_queue.py  schemas.py
backend/src/app/agent/brain/: __init__.py  address.py  canned.py  core.py  fast_intent.py  llm_loop.py  text_utils.py  tool_dispatch.py
backend/src/app/agent/memory/: facts.py  session.py
backend/src/app/agent/prompts/: filtering.py  system.py  voice.py
backend/src/app/agent/retrieval/: __init__.py  cache.py  hybrid_search.py  normalizer.py  reranker.py  search.py
backend/src/app/agent/tools/: base.py
backend/src/app/agent/voice/: audio_logger.py  coordinator.py  gemini_tts.py  object_storage.py  synthesis.py  transcription.py  tts_fallback.py
backend/src/app/agent/voice/pipelines/: __init__.py  pipeline_a.py  pipeline_b.py  pipeline_c.py  router.py
backend/src/app/agent/voice/providers/: base.py  gemini_live.py  openai_realtime.py  split_voice.py
backend/src/app/api/v1/: chat.py  health.py  ingest.py  onboarding.py  public.py  router.py  voice.py
backend/src/app/core/: cache.py  circuit_breaker.py  crypto.py  database.py  events.py  exceptions.py  http_retry.py  logging.py  middleware.py  net.py  pagination.py  ratelimit.py  security.py
backend/src/app/integrations/: factory.py
backend/src/app/integrations/adapters/: __init__.py  canonical.py  custom_adapter.py  shopify_adapter.py  woo_adapter.py
backend/src/app/integrations/base/: cart.py  commerce.py  order.py  product.py
backend/src/app/integrations/custom_api/: client.py
backend/src/app/integrations/shopify/: bulk_sync.py  client.py
backend/src/app/integrations/woocommerce/: cache.py  client.py
backend/src/app/modules/admin/: dependencies.py  router.py
backend/src/app/modules/analytics/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/app/modules/auth/: dependencies.py  models.py  repository.py  router.py  service.py
backend/src/app/modules/auth/oauth/: shopify.py
backend/src/app/modules/billing/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/app/modules/carts/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/app/modules/conversations/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/app/modules/offers/: dependencies.py  models.py  recommendations.py  repository.py  router.py  schemas.py  service.py
backend/src/app/modules/orders/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/app/modules/products/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/app/modules/tenants/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/app/modules/users/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/app/modules/webhooks/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/app/workers/: celery_app.py  schedules.py  utils.py
backend/src/app/workers/tasks/: analytics.py  billing.py  retry_actions.py  sync_products.py  webhooks.py
backend/static/: onboard.html  speako-loader.js  wooagent-widget.js
backend/tests/: README.md  conftest.py  test_admin_subscriptions.py  test_custom_api_timeout.py  test_guardrails.py  test_language_detection.py  test_orders_capture.py  test_reliability.py  test_rls.py  test_security.py  test_startup_guards.py  test_tenant_isolation.py
backend/tests/unit/: test_canned.py  test_live_navigation.py  test_voice_architecture.py
docs/: legacy-documentation.md
docs/adr/: 0001-clean-architecture.md  0002-multi-tenant-shared-database.md  0003-platform-adapter-pattern.md
infra/docker/: Caddyfile  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
ops/compose/: docker-compose.dev.yml
ops/docker/: Dockerfile.dev
scripts/: check_settings.php  seed_plans.py  start.bat  test_gemini.py  update-ngrok-url.ps1  update-ngrok-url.py
test_store/: TESTING.md  run_journey_load_test.py  run_scale_test.py  run_test_campaign.py  run_voice_load.py  run_voice_test.py  test_store.py  test_store_scale.py
tests/: conftest.py
tests/integration/: test_health.py
wooagent/: wooagent.php
wooagent-backend/: docker-compose.yml  main.py  prd.md  requirements.txt  test_connectivity.py
wooagent-backend/agent/: extractor.py  language.py  orchestrator.py  prompts.py  tools.py
wooagent-backend/models/: schemas.py
wooagent-backend/routers/: chat.py  greet.py  health.py  live.py  transcribe.py  (+1 more)
(+115 files in other folders)
