# ────────────────────────────────────────────────────────────────────────
# Agentic Commerce — Python project configuration
# ────────────────────────────────────────────────────────────────────────

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ─── Project metadata ───────────────────────────────────────────────────
[project]
name = "agentic-commerce"
version = "0.1.0"
description = "Multi-tenant SaaS backend for AI-powered e-commerce agents (WordPress, Shopify, custom integrations)"
authors = [{name = "Agentic Commerce", email = "dev@agentic-commerce.com"}]
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.12"
keywords = ["ai", "ecommerce", "saas", "multi-tenant", "voice-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

# ─── Production dependencies ────────────────────────────────────────────
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",

    # Validation and settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "email-validator>=2.1.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",

    # Cache
    "redis[hiredis]>=5.0.0",

    # HTTP client
    "httpx>=0.27.0",

    # Logging
    "structlog>=24.1.0",
    "python-json-logger>=2.0.7",

    # LLM providers (carried over from existing code)
    "google-genai>=1.0.0",
    "groq>=0.12.0",
    "openai>=1.40.0",

    # Security
    "argon2-cffi>=23.1.0",
    "pyjwt[crypto]>=2.8.0",
    "cryptography>=42.0.0",

    # Rate limiting
    "slowapi>=0.1.9",
]

# ─── Optional dependency groups ─────────────────────────────────────────
[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "ipython>=8.25.0",
    "types-redis>=4.6.0",
]

test = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.0",
    "factory-boy>=3.3.0",
    "faker>=25.0.0",
    "respx>=0.21.0",
    "freezegun>=1.5.0",
]

# ─── Hatch build target ─────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["app"]

# ─── Ruff (linter + formatter) ──────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    "wooagent",
    "wooagent-backend",
    "scripts",
    "app/migrations/versions",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # bugbear
    "C4",     # comprehensions
    "UP",     # pyupgrade
    "N",      # naming
    "SIM",    # simplify
    "RUF",    # ruff-specific
    "S",      # bandit security
    "ASYNC",  # async best practices
    "PTH",    # pathlib usage
    "RET",    # return statements
    "ARG",    # unused arguments
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # function calls in defaults — FastAPI Depends pattern
    "S101",   # asserts allowed in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "ARG", "PLR2004"]
"app/migrations/**/*.py" = ["E", "F", "I", "N"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

# ─── Mypy (type checker) ────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
exclude = [
    "wooagent/",
    "wooagent-backend/",
    "scripts/",
    "app/migrations/versions/",
]

# Strict mode for the inner clean-architecture rings
[[tool.mypy.overrides]]
module = ["app.domain.*", "app.application.*", "app.core.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true

# Lenient for third-party libs lacking stubs
[[tool.mypy.overrides]]
module = [
    "pgvector.*",
    "groq.*",
    "google.genai.*",
    "slowapi.*",
    "factory.*",
]
ignore_missing_imports = true

# ─── Pytest ─────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
]
markers = [
    "unit: fast tests with no external dependencies",
    "integration: tests requiring database or redis",
    "e2e: full request-cycle tests",
    "slow: tests that take more than 1 second",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore::DeprecationWarning:passlib.*",
]

# ─── Coverage ───────────────────────────────────────────────────────────
[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "app/migrations/*",
    "*/__init__.py",
    "app/main.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@overload",
]
