[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-commerce-backend"
version = "0.1.0"
description = "Multi-tenant SaaS backend for AI-powered commerce agents"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.14.0",
    # Cache / session
    "redis[hiredis]>=5.2.0",
    # Auth / security
    "PyJWT>=2.9.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=43.0.0",
    "python-slugify>=8.0.0",
    # HTTP client
    "httpx>=0.27.0",
    # AI / LLM
    "openai>=1.40.0",
    "groq>=0.12.0",
    "google-genai>=1.0.0",
    # Background tasks
    "celery[redis]>=5.4.0",
    # Logging
    "structlog>=24.4.0",
    "python-json-logger>=2.0.7",
    # Rate limiting
    "slowapi>=0.1.9",
    # Env / config
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "aiosqlite>=0.20.0",
]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S", "C4", "RET", "SIM"]
ignore = ["S101", "S104"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S"]
"migrations/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast unit tests with no external dependencies",
    "integration: tests requiring database or Redis",
    "e2e: full end-to-end HTTP tests",
]
